--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-streamlit==1.29.0
-streamlit-chat==0.1.1
-streamlit_calendar==0.5.0
+streamlit>=1.28.0
+streamlit-chat>=0.1.1
+streamlit-calendar>=0.3.0
